# zhizn_bro

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run_bot.py
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile
backend/ai/: __init__.py
backend/ai/prompts/: event_analysis.py
backend/ai/provider/: base.py  factory.py  gemini.py  groq.py
backend/ai/schemas/: responses.py
backend/ai/services/: __init__.py  analysis.py
backend/api/v1/: urls.py
backend/apps/assessments/: admin.py  apps.py  models.py
backend/apps/candidates/: admin.py  apps.py  models.py
backend/apps/criteria/: admin.py  apps.py  models.py  services.py
backend/apps/events/: admin.py  apps.py  models.py  services.py
backend/apps/reports/: admin.py  apps.py  models.py  tasks.py
backend/apps/users/: admin.py  managers.py  models.py  tasks.py
backend/backend/: celery.py  settings.py  urls.py
backend/core/: filters.py  notifications.py  pagination.py  permissions.py  sentry.py  throttling.py
backend/core/choices/: __init__.py  attachment.py
backend/core/exceptions/: __init__.py  base.py  handlers.py
backend/core/logger/: __init__.py  _constants.py  _logger.py
backend/core/mixins/: __init__.py  (+1 more)
backend/templates/: landing.html
bot/: Dockerfile  main.py
bot/client/: __init__.py  api.py
bot/handlers/: assessments.py  cancel.py  candidates.py  events.py  reports.py  settings.py  start.py  tests.py
bot/keyboards/: inline.py  reply.py
bot/messages/: ru.py
bot/middlewares/: auth.py
bot/states/: fsm.py
core/exceptions/: __init__.py  base.py
core/logger/: _logger.py
docs/: ENDPOINTS.md
nginx/: 00-security.conf  default.conf
tests/: conftest.py  factories.py
tests/integration/: test_auth_api.py  test_candidates_api.py  test_events_api.py  test_hard_stops_api.py  test_models.py  test_reports_api.py  test_users_api.py
tests/unit/: test_candidates.py  test_criteria.py  test_criteria_weights.py  test_events.py  test_hard_stop_suggestion.py  test_scoring.py  test_users.py
(+52 files in other folders)
