[project]
name = "zhizn-bro"
version = "0.1.0"
description = "Жизнь БРО (Без Розовых Очков)"
authors = [
    { name = "Shoxrux Yuldashov", email = "deagleshox@mail.ru" }
]
license = "MIT"
requires-python = ">=3.11,<3.15"
dependencies = [
    "django (==5)",
    "djangorestframework (==3.17)",
    "aiogram (==3.26)",
    "python-decouple (>=3.8,<4.0)",
    "reportlab (>=4.4.10,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=7.4.0,<8.0.0)",
    "gunicorn (>=25.3.0,<26.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]

[dependency-groups]
dev = [
    "isort (>=8.0.1,<9.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "djlint (>=1.36.4,<2.0.0)"
]
tests = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "faker (>=40.12.0,<41.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 79
max-complexity = 6
count = true
per-file-ignores = [
    "__init__.py:F401,F403",
    "**/settings.py:E501"
]
extend-ignore = [
    "E203",
    "E231",
    "E241",
    "W503",
    "F811",
    "R503",
    "R504",
    "R505"
]
exclude = [
    ".git/",
    "__pycache__/",
    "**/migrations/",
    "manage.py",
    "settings.py",
    "env/",
    "venv/",
    ".env/",
    ".venv/",
    "tests/",
    ".pytest_cache",
    ".vscode/",
    ".idea/"
]

[tool.black]
line-length = 79
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | __pycache__
  | \.pytest_cache
  | \.vscode
  | \.idea
  | venv
  | env
  | \.venv
  | \.env
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_local_folder = [
    "",
]
